# cyril-lang

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  cmds.h
src/Cyril/: Cyril.cpp  Cyril.h  CyrilBloom.cpp  CyrilBloom.h  CyrilOp.cpp  CyrilOp.h  CyrilParser.cpp  CyrilParser.h  CyrilPixelate.cpp  CyrilPixelate.h  CyrilState.h  cyril.lpp  cyril.ypp  instr.cpp  instr.h
src/Cyril/Funs/: CyrilCosFun.cpp  CyrilCosFun.h  CyrilFftFun.cpp  CyrilFftFun.h  CyrilFun.cpp  CyrilFun.h  CyrilHsbFun.cpp  CyrilHsbFun.h  CyrilLerpFun.cpp  CyrilLerpFun.h  CyrilMapFun.cpp  CyrilMapFun.h  CyrilNoiseFun.cpp  CyrilNoiseFun.h  CyrilPaletteFun.cpp  CyrilPaletteFun.h  CyrilRandFun.cpp  CyrilRandFun.h  CyrilSinFun.cpp  CyrilSinFun.h  CyrilTanFun.cpp  CyrilTanFun.h  CyrilWaveFun.cpp  CyrilWaveFun.h
src/Cyril/Lang/: CyrilAssign.h  CyrilColorLoad.cpp  CyrilColorLoad.h  CyrilDebugOp.cpp  CyrilDebugOp.h  CyrilDo.h  CyrilFor.h  CyrilHexColor.h  CyrilIf.h  CyrilList.h  CyrilLoad.h  CyrilNamedColor.h  CyrilPush.h  CyrilUnaryOp.h  CyrilWhile.h
src/Cyril/Ops/: CyrilAnimStep.cpp  CyrilAnimStep.h  CyrilAnimation.cpp  CyrilAnimation.h  CyrilBackgroundOp.cpp  CyrilBackgroundOp.h  CyrilBallDetailOp.cpp  CyrilBallDetailOp.h  CyrilBallOp.cpp  CyrilBallOp.h  CyrilBinaryOp.h  CyrilBlink.cpp  CyrilBlink.h  CyrilBoxOp.cpp  CyrilBoxOp.h  CyrilColorOp.cpp  CyrilColorOp.h  CyrilConeOp.cpp  CyrilConeOp.h  CyrilDie.h  CyrilFillOp.cpp  CyrilFillOp.h  CyrilGridOp.cpp  CyrilGridOp.h  CyrilImgOp.cpp  CyrilImgOp.h  CyrilInitOp.cpp  CyrilInitOp.h  CyrilKaleidoscope.cpp  CyrilKaleidoscope.h  CyrilLightOp.cpp  CyrilLightOp.h  CyrilLineOp.cpp  CyrilLineOp.h  CyrilMoveOp.cpp  CyrilMoveOp.h  CyrilNoFillOp.cpp  CyrilNoFillOp.h  CyrilNoiseWarp.cpp  CyrilNoiseWarp.h  (+28 more)
src/Engine/: Palette.h  Particle.h
